--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.10.0",
     "next": "13.2.4",
+    "next-absolute-url": "^1.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.3",
+    "react-scroll-parallax": "^3.3.2"
   }
 }
