--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "framer-motion": "^10.10.0",
+    "mapbox-gl": "^2.14.1",
     "next": "13.2.4",
     "next-absolute-url": "^1.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "react-map-gl": "^7.0.23",
     "react-scroll-parallax": "^3.3.2"
   }
 }
